// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closes menu when document is clicked 1`] = `
<DropDown
  align="left"
  direction="down"
  showOnHover={false}
>
  <div
    className="container down left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <DropDownSelector
      isActive={false}
    >
      <div
        className="selectedItem false"
      >
        <DropDownItem
          icon={
            <span
              aria-label="de"
              role="img"
            >
              🇩🇪
            </span>
          }
          isActive={true}
        >
          <div
            className="item active hasIcon"
          >
            <a
              href="/de"
            >
              Deutschland
            </a>
            <span
              className="icon"
            >
              <span
                aria-label="de"
                role="img"
              >
                🇩🇪
              </span>
            </span>
          </div>
        </DropDownItem>
      </div>
    </DropDownSelector>
  </div>
</DropDown>
`;

exports[`Renders DropDown without crashing 1`] = `
<div
  className="container down left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="selectedItem false"
  >
    <div
      className="item active false"
    >
      <a
        href="/"
      >
        Products
      </a>
    </div>
  </div>
</div>
`;

exports[`Renders correctly when no icon is provided 1`] = `
<div
  className="container down left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="selectedItem false"
  >
    <div
      className="item false false"
    >
      <a
        href="/"
      >
        Österreich
      </a>
    </div>
  </div>
</div>
`;

exports[`Renders menu when button is clicked 1`] = `
<DropDown
  align="left"
  direction="down"
  showOnHover={false}
>
  <div
    className="container down left"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <DropDownSelector
      isActive={false}
    >
      <div
        className="selectedItem false"
      >
        <DropDownItem
          icon={
            <span
              aria-label="us"
              role="img"
            >
              🇺🇸
            </span>
          }
          isActive={true}
        >
          <div
            className="item active hasIcon"
          >
            <a
              href="/us"
            >
              United States
            </a>
            <span
              className="icon"
            >
              <span
                aria-label="us"
                role="img"
              >
                🇺🇸
              </span>
            </span>
          </div>
        </DropDownItem>
      </div>
    </DropDownSelector>
    <DropDownItems>
      <div
        className="items"
      >
        <DropDownItem
          icon={
            <span
              aria-label="at"
              role="img"
            >
              🇦🇹
            </span>
          }
          isActive={false}
        >
          <div
            className="item false hasIcon"
          >
            <a
              href="/"
            >
              Österreich
            </a>
            <span
              className="icon"
            >
              <span
                aria-label="at"
                role="img"
              >
                🇦🇹
              </span>
            </span>
          </div>
        </DropDownItem>
      </div>
    </DropDownItems>
  </div>
</DropDown>
`;

exports[`Renders with align right and showOnHover false 1`] = `
<div
  className="container down right"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="selectedItem false"
  >
    <div
      className="item active hasIcon"
    >
      <a
        href="/"
      >
        Österreich
      </a>
      <span
        className="icon"
      >
        <span
          aria-label="at"
          role="img"
        >
          🇦🇹
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Renders with direction up 1`] = `
<div
  className="container up left"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="selectedItem false"
  >
    <div
      className="item active hasIcon"
    >
      <a
        href="/"
      >
        Österreich
      </a>
      <span
        className="icon"
      >
        <span
          aria-label="at"
          role="img"
        >
          🇦🇹
        </span>
      </span>
    </div>
  </div>
</div>
`;
